--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<h2>Aantal verkochte TV's <span class="green" id="totalAmount">[soldTv]</span></h2>
+<h2>Ingekochte TV's <span class="blue" id="totalStock">[stock]</span></h2>
+<h2>Aantal TV's nog te verkopen <span class="red" id="inventory">[voorraad]</span></h2>
 
 <script src="main.js"></script>
 <script src="opdract1.js"></script>
