--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <h2>Aantal verkochte TV's <span class="green" id="totalAmount">[soldTv]</span></h2>
 <h2>Ingekochte TV's <span class="blue" id="totalStock">[stock]</span></h2>
 <h2>Aantal TV's nog te verkopen <span class="red" id="inventory">[voorraad]</span></h2>
+<h3>Wij verkopen de volgende merken TV's:</h3>
+<ol id="brandsAv">[merken]</ol>
 
+<article id="tvNfo">
+
+</article>
+<article id="allTv"></article>
 <script src="main.js"></script>
 <script src="opdract1.js"></script>
 <script src="opdracht2.js"></script>
+<script src="opdracht3.js"></script>`
+<script src="opdracht4.js"></script>
 </body>
 </html>
